--- a/src/Client/AngularClient/addressBook.angular/addressBook.angular/ClientApp/src/app/addressbook/addressbook.component.html
+++ b/src/Client/AngularClient/addressBook.angular/addressBook.angular/ClientApp/src/app/addressbook/addressbook.component.html
@@ -4,9 +4,19 @@
 
 <div class="row">
   <app-addressbook-form></app-addressbook-form><br />
-  <input type="search" [(ngModel)]="search">
+  <div class="row">
+    <div class="form-group col-md-4">
+      <input class="form-control form-control-" type="search" [(ngModel)]="search" placeholder="Search by Name">
+    </div>
+    <div class="form-group col-md-4">
+      <input class="form-control form-control-" type="search" placeholder="Search by Phone">
+    </div>
+    <div class="form-group col-md-4">
+      <input class="form-control form-control-" type="search" placeholder="Search by Address">
+    </div>
+  </div>
 
-  <div >
+  <div>
     <table class="table">
       <thead>
         <tr>
@@ -32,5 +42,5 @@
     </table>
   </div>
 
-  
+
 </div>
