--- a/src/Client/AngularClient/addressBook.angular/addressBook.angular/ClientApp/src/app/app.component.html
+++ b/src/Client/AngularClient/addressBook.angular/addressBook.angular/ClientApp/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-  <app-addressbook></app-addressbook>
+  <!--<app-addressbook></app-addressbook>-->
+  <router-outlet></router-outlet>
 </div>
