--- a/src/Client/AngularClient/addressBook.angular.client/src/app/edit-contact/edit-contact.component.html
+++ b/src/Client/AngularClient/addressBook.angular.client/src/app/edit-contact/edit-contact.component.html
@@ -3,10 +3,6 @@
 </div>
 
 <div class="container">
-  <h1>Update Post</h1>
-
-  <a href="#" routerLink="/" class="btn btn-primary">Back</a>
-
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-group">
       <label for="fullName">Full Name:</label>
@@ -77,7 +73,9 @@
       <div *ngIf="f['title'].errors && f['title'].errors['required']">Title is required.</div>
     </div>-->
     </div>
-
-    <button class="btn btn-primary" type="submit">Update</button>
+    <br />
+    <button class="btn btn-primary" href="#" type="submit">Update</button>
+    <span style="color: blue"> | </span>
+    <a href="#" routerLink="/" class="btn btn-primary">Back</a>
   </form>
 </div>
