--- a/src/Client/AngularClient/addressBook.angular.webAPI/addressBook.angular/Pages/_ViewImports.cshtml
+++ b/src/Client/AngularClient/addressBook.angular.webAPI/addressBook.angular/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using addressBook.angular
-@namespace addressBook.angular.Pages
+@using AddressBookAngular
+@namespace AddressBookAngular.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
